--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,11 @@ script: |
     set rtp+=tabular
     set rtp+=vader.vim
     set rtp+=.
+    filetype plugin on
     python3 import sys
     python3 sys.path.append('/home/travis/virtualenv/python3.5.6/lib/python3.5/site-packages')
     EOF) -c "Vader! -q test/*" 
-    #EOF) -c "call JiraVimBoardOpen('TEST')"
+    #EOF) -s <(cat <<EOF
+    #:call JiraVimBoardOpen('A second')
+    #EOF)
     #/usr/local/bin/vim -c "python3 print(\"hi\")"
